messed around with some CSS

--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
 
     <section id="projects">
         <h2>Projects</h2>
-        <p>Describe your projects and provide links to them.</p>
+        <p>Generated this website with ChatGPT</p>
     </section>
 
     <section id="experience">
         <h2>Work Experience</h2>
-        <p>Detail your work experience and achievements.</p>
+        <p>I'm a first year bro. Why do you think I have work experience?</p>
     </section>
 
     <section id="contact">
         <h2>Contact</h2>
         <p>Email: yiuhochingstephen@email.com<br>
-        LinkedIn: <a href="https://www.linkedin.com/in/stephen-yiu" target="_blank">LinkedIn Profile</a></p>
+        LinkedIn: <a href="https://www.linkedin.com/in/stephen-yiu" target="_blank">LinkedIn Profile</a><br></p>
     </section>
 
     <footer>
